--- a/datasciphase1.ipynb
+++ b/datasciphase1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAK3aLV1L0qq8+Wt4upVzG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "Hj0i9LueCfmO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6de38fc7-e45b-4447-89e9-ddca5316eb32"
+        "outputId": "9af1be59-10e4-4768-82db-d9ed830d35f9"
       },
       "outputs": [
         {
@@ -47,6 +46,29 @@
       ],
       "source": [
         "print('hello')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('hi')"
+      ],
+      "metadata": {
+        "id": "rlgXUcBODp9c",
+        "outputId": "e3366387-11a9-4420-8f6a-be2e646b32ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hi\n"
+          ]
+        }
       ]
     }
   ]
