--- a/datasciphase1.ipynb
+++ b/datasciphase1.ipynb
@@ -28,6 +28,29 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"hi\");"
+      ],
+      "metadata": {
+        "id": "QMyYwPTt5gEh",
+        "outputId": "5f28e1ca-0178-4483-f9bb-33d5c2013028",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Cell 1: Imports & Logging\n",
         "import time, json, csv, re, sys, traceback\n",
         "import requests\n",
@@ -41,7 +64,7 @@
       "metadata": {
         "id": "Lsp1MjHXMKym"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +88,7 @@
       "metadata": {
         "id": "DzG8VTt0MV8K"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +114,7 @@
       "metadata": {
         "id": "KAHxo3CuMTYn"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +141,7 @@
       "metadata": {
         "id": "qBP4aGxDMeXf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +177,7 @@
       "metadata": {
         "id": "SPCVj__-MgKU"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +277,7 @@
       "metadata": {
         "id": "YGXrwUWiMi_U"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +300,7 @@
       "metadata": {
         "id": "FmeFcJ7rMlJo"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -313,7 +336,7 @@
       "metadata": {
         "id": "AuAmDpK8Ml3-"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -355,7 +378,7 @@
       "metadata": {
         "id": "Dcd8izIfMoeG"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,7 +408,7 @@
         },
         "outputId": "53dee75d-c77f-4e52-adf2-12d9f50c4a0d"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
