--- a/ALsaudi.ipynb
+++ b/ALsaudi.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "ALsaudi.ipynb",
-      "authorship_tag": "ABX9TyNpJeXhWFl2NagYIgRMVYYL",
+      "authorship_tag": "ABX9TyMRkvykkO39lgllfJDcZ44s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,12 +66,12 @@
       "metadata": {
         "id": "S11DfOxqa4w8"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "G9yOse3Ja1wl"
       },
@@ -300,8 +300,64 @@
       "metadata": {
         "id": "ZCy65DwcbCOH"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# === Cell 4: Save outputs ===\n",
+        "import csv, json\n",
+        "\n",
+        "OUT_JSON = \"alsaudi_menu.json\"\n",
+        "OUT_CSV  = \"alsaudi_menu.csv\"\n",
+        "\n",
+        "final = await scrape_many_categories(CATEGORY_IDS)\n",
+        "\n",
+        "print(f\"Total items scraped: {len(final)}\")\n",
+        "missing_img = sum(1 for r in final if not r.get(\"image_file\"))\n",
+        "print(f\"Images saved: {len(final)-missing_img} | Missing images: {missing_img}\")\n",
+        "\n",
+        "# JSON\n",
+        "with open(OUT_JSON, \"w\", encoding=\"utf-8\") as f:\n",
+        "    json.dump(final, f, ensure_ascii=False, indent=2)\n",
+        "\n",
+        "# CSV\n",
+        "fieldnames = [\"name\", \"image_file\", \"classification\", \"scrape_date\"]\n",
+        "with open(OUT_CSV, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+        "    w = csv.DictWriter(f, fieldnames=fieldnames)\n",
+        "    w.writeheader()\n",
+        "    for row in final:\n",
+        "        w.writerow({k: row.get(k, \"\") for k in fieldnames})\n",
+        "\n",
+        "print(f\"Saved → {OUT_JSON} & {OUT_CSV}. Images in ./images/\")\n"
+      ],
+      "metadata": {
+        "id": "aEAyDMMUeJXS",
+        "outputId": "9ddcde7b-f4a6-44f3-9df5-2bb280f6ba7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[https://www.alsaudi.sa/menu/category/3?language=ar] Cards found: 9\n",
+            "[https://www.alsaudi.sa/menu/category/9?language=ar] Cards found: 12\n",
+            "[https://www.alsaudi.sa/menu/category/8?language=ar] Cards found: 7\n",
+            "[https://www.alsaudi.sa/menu/category/2?language=ar] Cards found: 17\n",
+            "[https://www.alsaudi.sa/menu/category/19?language=ar] Cards found: 7\n",
+            "[https://www.alsaudi.sa/menu/category/6?language=ar] Cards found: 10\n",
+            "[https://www.alsaudi.sa/menu/category/5?language=ar] Cards found: 5\n",
+            "Total items scraped: 67\n",
+            "Images saved: 67 | Missing images: 0\n",
+            "Saved → alsaudi_menu.json & alsaudi_menu.csv. Images in ./images/\n"
+          ]
+        }
+      ]
     }
   ]
 }
