--- a/Sayyidaty.ipynb
+++ b/Sayyidaty.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCSBUCFBWmO7hBfLvfE5aq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,9 +239,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TMcpUHujvb3c",
-        "outputId": "51105c02-97ac-45c5-b62d-5774d3205245"
+        "outputId": "3d8a418b-32a1-4265-b0f5-68635904b56d"
       },
-      "execution_count": 27,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,63 +254,61 @@
             "Found 19 dishes on page 2\n",
             "Scraping page 3: https://kitchen.sayidaty.net/recipes/index/cuisine/2419?page=3\n",
             "Found 19 dishes on page 3\n",
-            "Total unique dishes found: 55\n",
-            "Scraping dish 1/55: https://kitchen.sayidaty.net/node/33617/السمبوسة-السعودية-بالجبنة/المقبلات/وصفات-رمضانية\n",
-            "Scraping dish 2/55: https://kitchen.sayidaty.net/node/33512/اللقيمات-السعودية-التقليدية/حلويات/وصفات-رمضانية\n",
-            "Scraping dish 3/55: https://kitchen.sayidaty.net/node/34837/المندي-السعودي-في-المنزل/وصفات-طبخ/وصفات\n",
-            "Scraping dish 4/55: https://kitchen.sayidaty.net/node/33629/السليق-السعودي-بالدجاج-والسمن/وصفات-طبخ/وصفات-رمضانية\n",
-            "Scraping dish 5/55: https://kitchen.sayidaty.net/node/36039/القشد-التقليدي-لضيافة-اليوم-الوطني-السعودي/حلويات/وصفات\n",
-            "Scraping dish 6/55: https://kitchen.sayidaty.net/node/36053/خبز-الخمير/وصفات-الخبز/وصفات\n",
-            "Scraping dish 7/55: https://kitchen.sayidaty.net/node/33639/الحنيذ-السعودي-باللحم/وصفات-طبخ/وصفات-رمضانية\n",
-            "Scraping dish 8/55: https://kitchen.sayidaty.net/node/33630/دجاج-الزربيان-مع-الأرز-المتبل/وصفات-طبخ/وصفات-رمضانية\n",
-            "Scraping dish 9/55: https://kitchen.sayidaty.net/node/34671/كعك-العيد-السعودي/حلويات/وصفات\n",
-            "Scraping dish 10/55: https://kitchen.sayidaty.net/node/34065/الكبسة-السعودية-بالدجاج-مع-البهارات-الأصلية/وصفات-طبخ/وصفات\n",
-            "Scraping dish 11/55: https://kitchen.sayidaty.net/node/34368/فول-على-الطريقة-الحجازية/وصفات-فطور/وصفات\n",
-            "Error fetching https://kitchen.sayidaty.net/node/34368/فول-على-الطريقة-الحجازية/وصفات-فطور/وصفات: HTTPSConnectionPool(host='kitchen.sayidaty.net', port=443): Read timed out. (read timeout=10)\n",
-            "Scraping dish 12/55: https://kitchen.sayidaty.net/node/34734/طريقة-عمل-الكليجة-السعودية/حلويات/وصفات\n",
-            "Scraping dish 13/55: https://kitchen.sayidaty.net/node/35528/لقيمات-محشية-بالقشطة/حلويات/وصفات\n",
-            "Scraping dish 14/55: https://kitchen.sayidaty.net/node/35065/كبسة-حاشي/وصفات-طبخ/وصفات\n",
-            "Scraping dish 15/55: https://kitchen.sayidaty.net/node/34178/اللقيمات-الذهبية-الهشة-بدون-بيض/حلويات/وصفات\n",
-            "Scraping dish 16/55: https://kitchen.sayidaty.net/node/33901/كبسة-اللحم-بالأرز-البسمتي/وصفات-طبخ/وصفات\n",
-            "Scraping dish 17/55: https://kitchen.sayidaty.net/node/36040/المفطح-السعودي-باللحم/وصفات-طبخ/وصفات\n",
-            "Scraping dish 18/55: https://kitchen.sayidaty.net/node/35168/كباب-ميرو-السعودي/وصفات-طبخ/وصفات\n",
-            "Scraping dish 19/55: https://kitchen.sayidaty.net/node/36092/الكليجة-السعودية/حلويات/وصفات\n",
-            "Scraping dish 20/55: https://kitchen.sayidaty.net/node/36037/الجريش-بالدجاج/وصفات-طبخ/وصفات\n",
-            "Scraping dish 21/55: https://kitchen.sayidaty.net/node/35597/البسبوسة-الحجازية/حلويات/وصفات\n",
-            "Scraping dish 22/55: https://kitchen.sayidaty.net/node/34841/ثريد-اللحم-بالخضار-السعودي/وصفات-طبخ/وصفات\n",
-            "Scraping dish 23/55: https://kitchen.sayidaty.net/node/35624/كبسة-الدجاج-بالزعفران/وصفات-طبخ/وصفات\n",
-            "Scraping dish 24/55: https://kitchen.sayidaty.net/node/35556/ساندوتش-مقلقل-دجاج/وصفات-طبخ/وصفات\n",
-            "Scraping dish 25/55: https://kitchen.sayidaty.net/node/34672/معمول-حجازي-على-أصوله/حلويات/وصفات\n",
-            "Scraping dish 26/55: https://kitchen.sayidaty.net/node/35796/طريقة-عمل-كبسة-لحم/وصفات-طبخ/وصفات\n",
-            "Scraping dish 27/55: https://kitchen.sayidaty.net/node/33961/قهوة-لوز-بالفيديو/مشروبات-وعصائر/وصفات-الفيديو\n",
-            "Scraping dish 28/55: https://kitchen.sayidaty.net/node/35472/خبز-المقشوش-السعودي-بالعسل/وصفات-الخبز/وصفات\n",
-            "Scraping dish 29/55: https://kitchen.sayidaty.net/node/34531/طريقة-عمل-الكبسة-السعودية-باللحمة/وصفات-طبخ/وصفات\n",
-            "Scraping dish 30/55: https://kitchen.sayidaty.net/node/33880/حلى-السقدانة-الحجازي-الصحي-للرجيم/حلويات/وصفات\n",
-            "Scraping dish 31/55: https://kitchen.sayidaty.net/node/33757/خبز-التميس-الأصلي/وصفات-رمضانية/وصفات\n",
-            "Scraping dish 32/55: https://kitchen.sayidaty.net/node/34692/المقلقل-السعودي-الوصفة-الأصلية/وصفات-طبخ/وصفات\n",
-            "Scraping dish 33/55: https://kitchen.sayidaty.net/node/36074/طريقة-عمل-الكليجا-السعودية-لضيافة-اليوم-الوطني-السعودي/حلويات/وصفات\n",
-            "Scraping dish 34/55: https://kitchen.sayidaty.net/node/33987/خبز-التميس-على-الطريقة-الأصلية/وصفات-الخبز/وصفات\n",
-            "Scraping dish 35/55: https://kitchen.sayidaty.net/node/33971/طريقة-عمل-عيش-أبو-اللحم/وصفات-طبخ/وصفات\n",
-            "Scraping dish 36/55: https://kitchen.sayidaty.net/node/34718/القهوة-السعودية-لضيافة-العيد/مشروبات-وعصائر/وصفات\n",
-            "Scraping dish 37/55: https://kitchen.sayidaty.net/node/33537/الكبسة-وأسياخ-الدجاج-المشوية-بتتبيلة-الروب-من-ساديا-بالفيديو/وصفات-طبخ/وصفات-الفيديو/وصفات-رمضانية\n",
-            "Scraping dish 38/55: https://kitchen.sayidaty.net/node/33561/الرز-الحساوي-لإفطار-رمضان/وصفات-طبخ/وصفات-رمضانية\n",
-            "Scraping dish 39/55: https://kitchen.sayidaty.net/node/34122/طريقة-الكبسة-الحارة-بدون-دجاج/وصفات-طبخ/وصفات\n",
-            "Scraping dish 40/55: https://kitchen.sayidaty.net/node/34886/طريقة-عمل-السليق-بالدجاج-بقدر-الضغط/وصفات-طبخ/وصفات\n",
-            "Scraping dish 41/55: https://kitchen.sayidaty.net/node/36077/طريقة-عمل-شوربة-اللحم-السعودي/أكلات-اللحوم/وصفات\n",
-            "Scraping dish 42/55: https://kitchen.sayidaty.net/node/33969/طريقة-عمل-المطبق-السعودي/معجنات/وصفات\n",
-            "Scraping dish 43/55: https://kitchen.sayidaty.net/node/33511/الكبسة-السعودية-بالدجاج-مع-صلصة-الدقوس/وصفات-طبخ/وصفات-رمضانية\n",
-            "Scraping dish 44/55: https://kitchen.sayidaty.net/node/35718/الجريش-الأبيض-بالدجاج/وصفات-طبخ/وصفات\n",
-            "Scraping dish 45/55: https://kitchen.sayidaty.net/node/34853/كبسة-اللحمة-السعودية-وسلطة-الدقوس/وصفات-طبخ/وصفات\n",
-            "Scraping dish 46/55: https://kitchen.sayidaty.net/node/35541/شوربة-البورش-على-الطريقة-الروسية/الشوربة/وصفات\n",
-            "Scraping dish 47/55: https://kitchen.sayidaty.net/node/36093/تميس-السمن/وصفات-الخبز/وصفات\n",
-            "Scraping dish 48/55: https://kitchen.sayidaty.net/node/33554/الجريش-الأحمر/وصفات-طبخ/وصفات-رمضانية\n",
-            "Scraping dish 49/55: https://kitchen.sayidaty.net/node/36051/المقشوش-السعودي/حلويات/وصفات\n",
-            "Scraping dish 50/55: https://kitchen.sayidaty.net/node/36064/شاي-الجمر/مشروبات-وعصائر/وصفات\n",
-            "Scraping dish 51/55: https://kitchen.sayidaty.net/node/36035/أرز-الكبسة-السعودي-دون-لحم-أو-دجاج/وصفات-طبخ/وصفات\n",
-            "Scraping dish 52/55: https://kitchen.sayidaty.net/node/35403/كبسة-الدجاج-على-الطريقة-السعودية/وصفات-طبخ/وصفات\n",
-            "Scraping dish 53/55: https://kitchen.sayidaty.net/node/36089/الأرز-الحساوي-باللحم/وصفات-طبخ/وصفات\n",
-            "Scraping dish 54/55: https://kitchen.sayidaty.net/node/36041/القهوة-السعودية-الأصلية-لاحتفال-اليوم-الوطني/مشروبات-وعصائر/وصفات\n",
-            "Scraping dish 55/55: https://kitchen.sayidaty.net/node/36081/الشكشوكة-السعودية-بالبيض/وصفات-فطور/وصفات\n",
+            "Total unique dishes found: 54\n",
+            "Scraping dish 1/54: https://kitchen.sayidaty.net/node/36100/الخبز-الأحمر-الحساوي/وصفات-الخبز/وصفات\n",
+            "Scraping dish 2/54: https://kitchen.sayidaty.net/node/36099/الحنيني-السعودي/حلويات/وصفات\n",
+            "Scraping dish 3/54: https://kitchen.sayidaty.net/node/34178/اللقيمات-الذهبية-الهشة-بدون-بيض/حلويات/وصفات\n",
+            "Scraping dish 4/54: https://kitchen.sayidaty.net/node/36120/الدبيازة-حلى-ضيافة-لليوم-الوطني-السعودي/حلويات/وصفات\n",
+            "Scraping dish 5/54: https://kitchen.sayidaty.net/node/36110/المصابيب-السعودية/حلويات/وصفات\n",
+            "Scraping dish 6/54: https://kitchen.sayidaty.net/node/36118/قهوة-اللوز-الحجازية-التقليدية/مشروبات-وعصائر/وصفات\n",
+            "Scraping dish 7/54: https://kitchen.sayidaty.net/node/34841/ثريد-اللحم-بالخضار-السعودي/وصفات-طبخ/وصفات\n",
+            "Scraping dish 8/54: https://kitchen.sayidaty.net/node/34853/كبسة-اللحمة-السعودية-وسلطة-الدقوس/وصفات-طبخ/وصفات\n",
+            "Scraping dish 9/54: https://kitchen.sayidaty.net/node/36093/تميس-السمن/وصفات-الخبز/وصفات\n",
+            "Scraping dish 10/54: https://kitchen.sayidaty.net/node/36129/طريقة-عمل-الكبسة-بالدجاج-لغداء-اليوم-الوطني-السعودي/وصفات-طبخ/وصفات\n",
+            "Scraping dish 11/54: https://kitchen.sayidaty.net/node/36101/اللقيمات-السعودية/حلويات/وصفات\n",
+            "Scraping dish 12/54: https://kitchen.sayidaty.net/node/34671/كعك-العيد-السعودي/حلويات/وصفات\n",
+            "Scraping dish 13/54: https://kitchen.sayidaty.net/node/34734/طريقة-عمل-الكليجة-السعودية/حلويات/وصفات\n",
+            "Scraping dish 14/54: https://kitchen.sayidaty.net/node/36121/السليق-الطائفي/وصفات-طبخ/وصفات\n",
+            "Scraping dish 15/54: https://kitchen.sayidaty.net/node/36122/العريكة-السعودية/حلويات/وصفات\n",
+            "Scraping dish 16/54: https://kitchen.sayidaty.net/node/36074/طريقة-عمل-الكليجا-السعودية-لضيافة-اليوم-الوطني-السعودي/حلويات/وصفات\n",
+            "Scraping dish 17/54: https://kitchen.sayidaty.net/node/35541/شوربة-البورش-على-الطريقة-الروسية/الشوربة/وصفات\n",
+            "Scraping dish 18/54: https://kitchen.sayidaty.net/node/34065/الكبسة-السعودية-بالدجاج-مع-البهارات-الأصلية/وصفات-طبخ/وصفات\n",
+            "Scraping dish 19/54: https://kitchen.sayidaty.net/node/35597/البسبوسة-الحجازية/حلويات/وصفات\n",
+            "Scraping dish 20/54: https://kitchen.sayidaty.net/node/36037/الجريش-بالدجاج/وصفات-طبخ/وصفات\n",
+            "Scraping dish 21/54: https://kitchen.sayidaty.net/node/34368/فول-على-الطريقة-الحجازية/وصفات-فطور/وصفات\n",
+            "Scraping dish 22/54: https://kitchen.sayidaty.net/node/36131/مشروب-حليب-بالهيل-لضيافة-اليوم-الوطني-السعودي/مشروبات-وعصائر/وصفات\n",
+            "Scraping dish 23/54: https://kitchen.sayidaty.net/node/34672/معمول-حجازي-على-أصوله/حلويات/وصفات\n",
+            "Scraping dish 24/54: https://kitchen.sayidaty.net/node/36106/قهوة-القشر-السعودية/مشروبات-وعصائر/وصفات\n",
+            "Scraping dish 25/54: https://kitchen.sayidaty.net/node/36104/شكشوكة-حجازية-لليوم-الوطني-السعودي/وصفات-فطور/وصفات\n",
+            "Scraping dish 26/54: https://kitchen.sayidaty.net/node/36039/القشد-التقليدي-لضيافة-اليوم-الوطني-السعودي/حلويات/وصفات\n",
+            "Scraping dish 27/54: https://kitchen.sayidaty.net/node/36053/خبز-الخمير/وصفات-الخبز/وصفات\n",
+            "Scraping dish 28/54: https://kitchen.sayidaty.net/node/34531/طريقة-عمل-الكبسة-السعودية-باللحمة/وصفات-طبخ/وصفات\n",
+            "Scraping dish 29/54: https://kitchen.sayidaty.net/node/36126/الفول-المدمس-السعودي/وصفات-فطور/وصفات\n",
+            "Scraping dish 30/54: https://kitchen.sayidaty.net/node/35403/كبسة-الدجاج-على-الطريقة-السعودية/وصفات-طبخ/وصفات\n",
+            "Scraping dish 31/54: https://kitchen.sayidaty.net/node/36081/الشكشوكة-السعودية-بالبيض/وصفات-فطور/وصفات\n",
+            "Scraping dish 32/54: https://kitchen.sayidaty.net/node/35472/خبز-المقشوش-السعودي-بالعسل/وصفات-الخبز/وصفات\n",
+            "Scraping dish 33/54: https://kitchen.sayidaty.net/node/34837/المندي-السعودي-في-المنزل/وصفات-طبخ/وصفات\n",
+            "Scraping dish 34/54: https://kitchen.sayidaty.net/node/35718/الجريش-الأبيض-بالدجاج/وصفات-طبخ/وصفات\n",
+            "Scraping dish 35/54: https://kitchen.sayidaty.net/node/36079/كيك-اليوم-الوطني-السعودي/حلويات/وصفات\n",
+            "Scraping dish 36/54: https://kitchen.sayidaty.net/node/36035/أرز-الكبسة-السعودي-دون-لحم-أو-دجاج/وصفات-طبخ/وصفات\n",
+            "Scraping dish 37/54: https://kitchen.sayidaty.net/node/36064/شاي-الجمر/مشروبات-وعصائر/وصفات\n",
+            "Scraping dish 38/54: https://kitchen.sayidaty.net/node/35065/كبسة-حاشي/وصفات-طبخ/وصفات\n",
+            "Scraping dish 39/54: https://kitchen.sayidaty.net/node/34692/المقلقل-السعودي-الوصفة-الأصلية/وصفات-طبخ/وصفات\n",
+            "Scraping dish 40/54: https://kitchen.sayidaty.net/node/34122/طريقة-الكبسة-الحارة-بدون-دجاج/وصفات-طبخ/وصفات\n",
+            "Scraping dish 41/54: https://kitchen.sayidaty.net/node/36051/المقشوش-السعودي/حلويات/وصفات\n",
+            "Scraping dish 42/54: https://kitchen.sayidaty.net/node/35796/طريقة-عمل-كبسة-لحم/وصفات-طبخ/وصفات\n",
+            "Scraping dish 43/54: https://kitchen.sayidaty.net/node/36102/المطبق-السعودي/معجنات/وصفات\n",
+            "Scraping dish 44/54: https://kitchen.sayidaty.net/node/36092/الكليجة-السعودية/حلويات/وصفات\n",
+            "Scraping dish 45/54: https://kitchen.sayidaty.net/node/35528/لقيمات-محشية-بالقشطة/حلويات/وصفات\n",
+            "Scraping dish 46/54: https://kitchen.sayidaty.net/node/34718/القهوة-السعودية-لضيافة-العيد/مشروبات-وعصائر/وصفات\n",
+            "Scraping dish 47/54: https://kitchen.sayidaty.net/node/36041/القهوة-السعودية-الأصلية-لاحتفال-اليوم-الوطني/مشروبات-وعصائر/وصفات\n",
+            "Scraping dish 48/54: https://kitchen.sayidaty.net/node/36040/المفطح-السعودي-باللحم/وصفات-طبخ/وصفات\n",
+            "Scraping dish 49/54: https://kitchen.sayidaty.net/node/36077/طريقة-عمل-شوربة-اللحم-السعودي/أكلات-اللحوم/وصفات\n",
+            "Scraping dish 50/54: https://kitchen.sayidaty.net/node/35624/كبسة-الدجاج-بالزعفران/وصفات-طبخ/وصفات\n",
+            "Scraping dish 51/54: https://kitchen.sayidaty.net/node/35168/كباب-ميرو-السعودي/وصفات-طبخ/وصفات\n",
+            "Scraping dish 52/54: https://kitchen.sayidaty.net/node/36091/الجريش-بالدجاج-لسفرة-غداء-اليوم-الوطني-السعودي/وصفات-طبخ/وصفات\n",
+            "Scraping dish 53/54: https://kitchen.sayidaty.net/node/34886/طريقة-عمل-السليق-بالدجاج-بقدر-الضغط/وصفات-طبخ/وصفات\n",
+            "Scraping dish 54/54: https://kitchen.sayidaty.net/node/35556/ساندوتش-مقلقل-دجاج/وصفات-طبخ/وصفات\n",
             "Successfully scraped 54 dishes with ingredients\n",
             "Data saved to saudi_dishes.csv\n",
             "Data saved to saudi_dishes.json\n",
@@ -319,22 +316,22 @@
             "Sample of scraped data:\n",
             "\n",
             "Dish 1:\n",
-            "Name: السمبوسة السعودية بالجبنة\n",
-            "Ingredients: ['- لتحضير الحشوه', 'جبن موزاريلا', 'بقدونس', 'النعناع', '- دقيق', '- الزيت النباتي', '- الماء', '- خميره', '- ملح']\n",
-            "Image URL: https://kitchen.sayidaty.net/uploads/small/76/76f4ab5d57aa4791daed182edf478168_w750_h500.jpg\n",
-            "Scraped on: 2025-09-20 16:31:45\n",
+            "Name: الخبز الأحمر الحساوي\n",
+            "Ingredients: ['- مقادير خليط التمر', 'التمر', 'ماء ساخن', '- دقيق', '- ماء فاتر', '- خميره', '- سكر', '- زيت الزيتون']\n",
+            "Image URL: https://kitchen.sayidaty.net/uploads/small/f3/f3e53ce9c083a0ce06cb4ed6597030fe_w750_h500.jpg\n",
+            "Scraped on: 2025-09-24 22:35:13\n",
             "\n",
             "Dish 2:\n",
-            "Name: اللقيمات السعودية التقليدية\n",
-            "Ingredients: ['- القطر', 'سكر', 'الماء', 'عصير الليمون', 'ماء الورد', '- الدقيق الابيض', '- نشاء الذره', '- سكر', '- الخميره الفوريه', '- ملح', '- ماء دافي', '- الزيت', '- مكسرات']\n",
-            "Image URL: https://kitchen.sayidaty.net/uploads/small/d5/d5b1703facc4cc6dad79cf5b7185da38_w750_h500.jpeg\n",
-            "Scraped on: 2025-09-20 16:31:49\n",
+            "Name: الحنيني السعودي\n",
+            "Ingredients: ['- التمر', '- دقيق', '- السمن البلدي', '- ماء ساخن', '- هيل', '- الزعفران', '- مكسرات']\n",
+            "Image URL: https://kitchen.sayidaty.net/uploads/small/37/378361f9a8c3e9f1666a6f26b6a245e7_w750_h500.jpg\n",
+            "Scraped on: 2025-09-24 22:35:15\n",
             "\n",
             "Dish 3:\n",
-            "Name: المندي السعودي في المنزل\n",
-            "Ingredients: ['- الدجاج', '- البصل', '- الثوم', '- الجزر', '- طماطم', '- ملح', '- فلفل اسود', '- هيل', '- ورق غار', '- القرفه', '- القرنفل', '- الكمون', '- ارز بسمتي', '- ثوم بودره', '- الزنجبيل', '- سمن', '- لومي', '- ملون الطعام البرتقالي', '- الزيت النباتي']\n",
-            "Image URL: https://kitchen.sayidaty.net/uploads/small/c9/c9b61c11e50cca8a2d39d916404eca8c_w750_h500.jpg\n",
-            "Scraped on: 2025-09-20 16:31:52\n"
+            "Name: اللقيمات الذهبية الهشة بدون بيض\n",
+            "Ingredients: ['- للعجينه', 'ماء دافي', 'الخميره الفوريه', 'سكر', 'طحين', 'ملح', 'النشاء', '- للقطر', 'الماء', 'عصير الليمون', 'ماء الورد', '- الزيت النباتي', '- سكر البودره', '- فستق حلبي']\n",
+            "Image URL: https://kitchen.sayidaty.net/uploads/small/5f/5f5a0ec922485de695a21f55c23caa81_w750_h500.jpg\n",
+            "Scraped on: 2025-09-24 22:35:18\n"
           ]
         }
       ]
