--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1509,6 +1509,21 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Conclusion**\n",
+        "\n",
+        "After all the translation and cleaning steps, the final output of this phase is:\n",
+        "SaudiFoodFile_standardized_consistent.csv\n",
+        "\n",
+        "This file is the fully processed and standardized version of the dataset —\n",
+        "all dish names and ingredients are now in English, cleaned, consistent, and ready for analysis or model training."
+      ],
+      "metadata": {
+        "id": "pLY6n1D0tKGN"
+      }
     }
   ]
 }
