--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1515,11 +1515,16 @@
       "source": [
         "# **Conclusion**\n",
         "\n",
-        "After all the translation and cleaning steps, the final output of this phase is:\n",
-        "SaudiFoodFile_standardized_consistent.csv\n",
+        "After all the translation and cleaning steps,  **the final output of this phase is::**\n",
+        " > `SaudiFoodFile_standardized_consistent.csv`\n",
         "\n",
+        "\n",
+        "\n",
+        ">\n",
         "This file is the fully processed and standardized version of the dataset —\n",
-        "all dish names and ingredients are now in English, cleaned, consistent, and ready for analysis or model training."
+        "all dish names and ingredients are now in English, cleaned, consistent, and ready for analysis and model training.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "pLY6n1D0tKGN"
