--- a/imagesCode.ipynb
+++ b/imagesCode.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFgd0FpApCwN302q5pdSKs",
+      "authorship_tag": "ABX9TyPXpis+YuXCW9GKTlt4MIeq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,15 +29,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Phase 2 – Image Processing:"
+        "# Phase 2 – Image Processing:\n",
+        "image preprocessing is an essential stage before any data analysis or machine-learning model training.\n",
+        "\n",
+        "The main goal is to make sure that all images are clean, consistent, and properly formatted for model input.\n",
+        "\n",
+        "This includes verifying image files, correcting errors, resizing them to a uniform size, normalizing their pixel values, and applying image augmentation to increase dataset diversity."
       ],
       "metadata": {
         "id": "CajOkO4fQlT7"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 1 – Setup and Imports:\n",
+        "In this step, I set up the environment and import all the required Python libraries such as pandas, numpy, and Pillow.\n",
+        "\n",
+        "These libraries allow me to load, analyze, and process the images efficiently.\n",
+        "I also define configuration variables like image size and output folders, which control how the images will be processed throughout the notebook."
+      ],
+      "metadata": {
+        "id": "oyIvXarIvO7X"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "XaQTXUYFO5lt"
       },
@@ -53,8 +71,8 @@
         "from PIL import Image, UnidentifiedImageError\n",
         "from tqdm import tqdm\n",
         "\n",
-        "# ---- Config (you can change these) ----\n",
-        "RESIZE_TO = (224, 224)   # change to (512, 512) if you prefer higher detail\n",
+        "# ---- Config  ----\n",
+        "RESIZE_TO = (224, 224)\n",
         "IMAGES_ROOT = \"images\"   # where the unzipped images will live\n",
         "CLEAN_DIR   = \"clean_images\"  # output directory for processed images\n",
         "MISSING_CSV = \"missing_images.csv\"  # log of missing/corrupt files\n",
@@ -62,11 +80,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 2 – Upload CSV and ZIP:\n",
+        "Here I upload two main files:\n",
+        "\n",
+        "\n",
+        "*   the CSV file, which contains the dataset information including the image_file column (the name of each image),\n",
+        "*   the ZIP file that contains all the original images.\n",
+        "\n",
+        "\n",
+        "This step ensures that the data is available in the Colab environment for extraction and further processing."
+      ],
+      "metadata": {
+        "id": "Cbex-xFJvaNP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# === Cell 2: Upload your CSV and ZIP ===\n",
+        "# === Cell 2: Upload CSV and ZIP ===\n",
         "from google.colab import files\n",
-        "uploaded = files.upload()   # Choose: your CSV and the images ZIP\n",
+        "uploaded = files.upload()   # Choose: CSV and the images ZIP\n",
         "\n",
         "# Identify CSV and ZIP from uploads\n",
         "csv_path = None\n",
@@ -91,7 +126,7 @@
         "id": "yphX3qaTRXnv",
         "outputId": "9e78250b-4550-44e9-b461-252650e9c650"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -300,6 +335,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 3 – Extract Images:\n",
+        "In this step, I extract all images from the uploaded ZIP file into a working folder named images/.\n",
+        "\n",
+        "This allows me to access each image directly from the folder.\n",
+        "A quick preview of a few filenames is displayed to confirm that the extraction worked correctly."
+      ],
+      "metadata": {
+        "id": "24U_WGTdvruU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# === Cell 3: Extract images ===\n",
@@ -331,7 +379,7 @@
         "id": "JvCvHt96Seg7",
         "outputId": "1055982f-b917-4c52-f397-7de92dd3d4c6"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,6 +390,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 4 – Read CSV and Validate Column:\n",
+        "Here I load the dataset CSV into a pandas DataFrame and confirm which column holds the image filenames.\n",
+        "\n",
+        "For this project, the correct column is image_file.\n",
+        "\n",
+        "This validation ensures that each record in the CSV can be linked to its corresponding image for processing."
+      ],
+      "metadata": {
+        "id": "ZOuPXvkIvy4d"
+      }
     },
     {
       "cell_type": "code",
@@ -359,7 +421,7 @@
         "id": "dfVjEIxNS3OZ",
         "outputId": "c0367cbb-b77f-4ef8-c4dc-b94537c4477f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,6 +437,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 5 – Image Lookup Function:\n",
+        "This section defines a helper function, safe_find(), which locates image files inside the extracted folder.\n",
+        "\n",
+        "It searches for filenames in a case-insensitive way and ensures the correct image is found even if there are minor differences in name formatting.\n"
+      ],
+      "metadata": {
+        "id": "00f-fEZowDCA"
+      }
     },
     {
       "cell_type": "code",
@@ -399,8 +473,41 @@
       "metadata": {
         "id": "qZhAPBSITlTD"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 6 – Main Image Processing Loop:\n",
+        "This is the main step where the actual processing happens for every image listed in the CSV.\n",
+        "\n",
+        "The code performs the following actions:\n",
+        "\n",
+        "\t•\tSaves the processed copies to a new folder called clean_images/.\n",
+        "\n",
+        "\n",
+        "*   Verifies if the image exists; logs missing ones.\n",
+        "*   Opens each image safely and skips corrupted files.\n",
+        "\n",
+        "\n",
+        "* Converts non-RGB images (like grayscale) to RGB to maintain consistency.\n",
+        "\n",
+        "*  Resizes all images to 224×224 pixels.\n",
+        "\n",
+        "\n",
+        "*   Saves the processed copies to a new folder called clean_images/.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "At the end, a summary is printed showing how many images were successfully processed, how many were missing, and how many were converted."
+      ],
+      "metadata": {
+        "id": "nXCXg66Ywg4t"
+      }
     },
     {
       "cell_type": "code",
@@ -465,7 +572,7 @@
         "id": "7_LGH_FMS8Qj",
         "outputId": "ec2f24ed-bde1-4dbe-a9ee-f368a8521350"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,6 +604,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 7 – Save Log and Summary:\n",
+        "This step saves all missing or corrupted image details into a CSV file named missing_images.csv.\n",
+        "\n",
+        "It also prints a summary of image processing results"
+      ],
+      "metadata": {
+        "id": "-86SDBWDw-P6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# === Cell 7: Save missing_images.csv and show summary ===\n",
@@ -524,7 +643,7 @@
         "id": "bPHU2uJpT61p",
         "outputId": "533a9dc5-df0d-48ca-93b3-b402cff2693b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,6 +661,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 8 – Normalize Pixel Values:\n",
+        "After the images are cleaned and resized, I normalize all pixel values to be between 0 and 1.\n",
+        "\n",
+        "This transformation ensures that all images are on the same scale, making it easier and faster for models to learn.\n",
+        "\n",
+        "The normalized dataset is saved as clean_images_normalized.npy — a compact NumPy file that stores all image arrays efficiently and is ready for use in training or analysis."
+      ],
+      "metadata": {
+        "id": "mwi3XdwWxH4D"
+      }
     },
     {
       "cell_type": "code",
@@ -575,7 +708,7 @@
         "id": "uyJhDnJjU-Cx",
         "outputId": "bbda7bf9-db9a-49c1-d942-51c1825463b6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,7 +765,7 @@
         "id": "kG51JSSpVbRU",
         "outputId": "8cd41f48-22a5-4a79-a2b9-8f1c40586f83"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +796,7 @@
         "id": "I7APFZDSYLhn",
         "outputId": "21249460-895a-4d9c-bc62-dc15f4bfe044"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,7 +826,7 @@
         "id": "yov8D9fjYNYF",
         "outputId": "bf63568b-596d-4187-f8ba-7aa9e181aaca"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -720,7 +853,7 @@
         "id": "mrj_9i_DYS_e",
         "outputId": "9c1de97a-5646-4f8f-81b6-01031de4cbb8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,7 +883,7 @@
         "id": "Eq1tQHMjYVa6",
         "outputId": "ce25ec24-4471-45f6-81d2-5ecc6044a372"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
